--- a/client/src/components/profile/profinfo.scss
+++ b/client/src/components/profile/profinfo.scss
@@ -28,7 +28,7 @@
 
 
 .accountinfo {
-    transform: translate(0, 5rem);
+    transform: translate(0, 7rem);
     width: 100%;
 
     .accountinfffo {
@@ -37,35 +37,55 @@
         height: flex;
         border-radius: 3rem;
 
-
+        .updatebtnnprof{
+            background: var(--mmy);
+            height: 2.5rem;
+            width: 12rem;
+            border-radius: 2rem;
+            margin-top: -5rem;
+            transform: translate(77rem,-8.2rem);
+            border: white solid 2px;
+            font-size: 1.1rem;
+            &:hover{
+                background: var(--mm);
+            }
+           
+        }
 
         .topinfo {
-            height: 11rem;
-            width: 70rem;
-            border: solid 4px white;
-            transform: translate(14rem, 1rem);
-            background: hsl(173, 82%, 24%);
-            border-radius: 3rem;
+            height: 10rem;
+            width: 95%;
+            background: rgb(40,40,40);
             margin-bottom: 2rem;
+            border-radius: 4rem;
+            display: flex;
+          
+            margin-left: 2.25rem;
+         
+
 
 
             .profileeimg {
-                width: 11rem;
-                height: 11rem;
-                border: solid 5px hsl(173, 82%, 24%);
+                width: 8.5rem;
+                height: 8.5rem;
+                border: solid 5px var(--cardBG);
                 border-radius: 50%;
                 margin-top: 0.8rem;
-                margin-left: -9rem;
-                transform: translate(2rem, -1.2rem);
+                transform: translate(2rem, 0rem);
+                margin-right: 3.5rem;
+                
+                
 
 
             }
 
             .profnamme {
                 color: white;
-                font-size: 60px;
-                transform: translate(4.5rem, -10rem);
+                font-size: 50px;
                 font-weight: 600;
+                transform: translateY(2rem);
+                margin-right: 30rem;
+
 
             }
         }
@@ -82,31 +102,18 @@
 
                 border-radius: 3rem;
                 width: 27rem;
-                height: 25rem;
+                height: 22rem;
                 margin-top: 3rem;
                 margin-bottom: 2rem;
 
                 .detailsprof {
-                    transform: translate(1.5rem, 1rem);
+                    transform: translate(1.9rem, 1rem);
                     color: hsl(173, 82%, 24%);
                     margin-top: 2rem;
                     font-size: 15px;
                 }
 
-                .updtbtn {
-                    background: var(--mmy);
-                    height: 2.5rem;
-                    width: 12rem;
-                    transform: translate(3.5rem, 4rem);
-                    border-radius: 2rem;
-                    border: white solid 2px;
 
-                    .updd {
-                        color: white;
-                    }
-
-
-                }
 
             }
 
@@ -192,7 +199,7 @@
                 margin-left: -3rem;
 
                 .tablematchaccount {
-                    width: 23rem;
+                    width: 24rem;
                     border-radius: 1.5rem;
                     background: rgb(40,40,40);
 
@@ -216,8 +223,8 @@
                         }
                         .imgaccc{
                             border-radius: 50rem;
-                            width: 5rem;
-                            height: 5rem;
+                            width: 4.5rem;
+                            height: 4.5rem;
                         }
 
                              }
