--- a/client/src/components/matchs/match.css
+++ b/client/src/components/matchs/match.css
@@ -19,67 +19,96 @@
   width: 98%;
   transform: translate(25px, 3rem);
 }
+.mainmatch .searchBar {
+  width: 23rem;
+  margin-bottom: 3rem;
+  transform: translateX(5.7rem);
+  height: 2.5rem;
+  border: 0;
+  border-bottom: 2px solid var(--greytext);
+  outline: 0;
+  font-size: 1.05rem;
+  color: black;
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
+}
+.mainmatch .searchBar::-moz-placeholder {
+  color: gray;
+}
+.mainmatch .searchBar::placeholder {
+  color: gray;
+}
+.mainmatch .searchBar:focus {
+  padding-bottom: 6px;
+  font-weight: 400;
+  border-width: 3px;
+  -o-border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+     border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+  border-image-slice: 1;
+}
+.mainmatch .icosearch {
+  margin-left: 3.7rem;
+  font-size: 1.5rem;
+  transform: translateY(0.5rem);
+  color: hsl(173, 82%, 24%);
+}
 .mainmatch .matchContent {
   justify-content: center;
   gap: 1.5rem;
 }
 .mainmatch .matchContent .singlematch {
-  height: 100%;
-  display: grid;
-  row-gap: 10px;
-  border-radius: 10px;
+  height: 3rem;
+  width: 90%;
+  margin-left: 5rem;
+  margin-bottom: 1rem;
+  border-radius: 2rem;
   align-items: center;
   background: var(--cardBG);
   box-shadow: 1 2px 2px rgba(140, 140, 141, 0.549);
-  overflow: hidden;
+  display: flex;
 }
 .mainmatch .matchContent .singlematch:hover {
   background: var(--mmm);
   box-shadow: 1 4px 4px rgba(85, 85, 114, 0.549);
   transition: 0.3S ease;
 }
-.mainmatch .matchContent .singlematch .imageDiv {
-  height: 180px;
-  width: 100%;
-  overflow: hidden;
-}
-.mainmatch .matchContent .singlematch .imageDiv .img {
-  height: 100%;
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  transition: 2s ease;
-}
-.mainmatch .matchContent .singlematch .imageDiv:hover img {
-  transform: scale(1.1);
+.mainmatch .matchContent .singlematch .imageDiv .imgg {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 5rem;
+  margin-left: 1rem;
+  margin-top: 0.5rem;
 }
 .mainmatch .matchContent .singlematch .matchInfo {
-  padding: 1rem;
+  display: flex;
+  gap: 4rem;
 }
 .mainmatch .matchContent .singlematch .matchInfo .matchTitle {
   color: var(--blackColor);
-  font-size: 1.25rem;
-  margin-top: -1rem;
+  font-size: 1.5rem;
+  margin-top: 1.8rem;
+  margin-left: 1rem;
+  margin-right: 3rem;
 }
 .mainmatch .matchContent .singlematch .matchInfo .matchcontinent {
-  gap: 0.5rem;
+  gap: 0.2rem;
+  margin-right: 3rem;
 }
 .mainmatch .matchContent .singlematch .matchInfo .matchcontinent .matchicon {
   color: var(--textColor);
-  font-size: 18px;
+  font-size: 1.25rem;
 }
 .mainmatch .matchContent .singlematch .matchInfo .matchcontinent .matchname {
   color: var(--textColor);
   font-weight: 400;
-  font-size: 14px;
+  font-size: 1.25rem;
 }
 .mainmatch .matchContent .singlematch .matchInfo .matchfees {
-  width: 100%;
   justify-content: space-between;
   padding: 1rem;
   margin: 1rem 0;
-  border-top: 1.5px solid var(--greytext);
-  border-bottom: 1.5px solid var(--greytext);
+  gap: 1rem;
 }
 .mainmatch .matchContent .singlematch .matchInfo .matchfees .matchgrade {
   color: var(--textColor);
@@ -92,7 +121,7 @@
   font-weight: 500;
 }
 .mainmatch .matchContent .singlematch .matchInfo .matchprice {
-  font-size: 2rem;
+  font-size: 1.75rem;
   color: var(--blackColor);
 }
 .mainmatch .matchContent .singlematch .matchdesc {
@@ -100,31 +129,13 @@
   height: 5rem;
   color: var(--textColor);
   font-weight: 500;
-}
-.mainmatch .matchContent .singlematch .matchbtn {
-  margin-top: 1rem;
-  color: var(--whiteColor);
-  font-weight: 700;
-  gap: 1.5rem;
-  border-radius: 2rem;
-  width: 7rem;
-  height: 2.5rem;
-  border: none;
-  background: var(--gradientColor);
-}
-.mainmatch .matchContent .singlematch .matchbtn .ta {
-  transform: translate(25px, -1px);
-  color: white;
-}
-.mainmatch .matchContent .singlematch .matchbtn .ta .matchicon {
-  transform: translate(1px, 3px);
-  align-self: center;
-  font-size: 18px;
+  transform: translateY(2.3rem);
+  margin-left: 2rem;
 }
 
 @media screen and (min-width: 500px) {
   .matchContent {
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(1, 1fr);
   }
   .matchContent .singleDestination {
     height: auto;
