--- a/client/src/components/matchs/match.scss
+++ b/client/src/components/matchs/match.scss
@@ -17,24 +17,58 @@
 
 .mainmatch {
     width: 98%;
-        transform: translate(25px,3rem);
+    transform: translate(25px, 3rem);
+    .searchBar{
+        width: 23rem;
+        margin-bottom: 3rem;
+        transform: translateX(5.7rem);
+        height: 2.5rem;
+        border: 0;
+                border-bottom: 2px solid var(--greytext);
+                outline: 0;
+                font-size: 1.05rem;
+                color: black;
+                padding: 7px 0;
+                background: transparent;
+                transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
+             
+
+                &::placeholder {
+                    color: gray;
+                }
+
         
+                &:focus {
+                    padding-bottom: 6px;
+                    font-weight: 400;
+                    border-width: 3px;
+                    border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+                    border-image-slice: 1;}
+
+    }
+    .icosearch{
+        margin-left: 3.7rem;
+        font-size: 1.5rem;
+        transform: translateY(0.5rem);
+        color: hsl(173, 82%, 24%),;
+    }
+
 
     .matchContent {
         justify-content: center;
         gap: 1.5rem;
-        
+
 
         .singlematch {
-            height: 100%;
-            display: grid;
-            row-gap: 10px;
-          
-            border-radius: 10px;
+            height: 3rem;
+            width: 90%;
+            margin-left: 5rem;
+            margin-bottom: 1rem;
+            border-radius: 2rem;
             align-items: center;
             background: var(--cardBG);
-            box-shadow:1 2px 2px rgba(140, 140, 141, 0.549);
-            overflow: hidden;
+            box-shadow: 1 2px 2px rgba(140, 140, 141, 0.549);
+            display: flex;
 
             &:hover {
                 background: var(--mmm);
@@ -44,115 +78,102 @@
             }
 
             .imageDiv {
-                height: 180px;
-                width: 100%;
-                overflow: hidden;
 
-                .img {
-                    height: 100%;
-                    width: 100%;
-                    object-fit: cover;
-                    transition: 2s ease;
+                .imgg {
+                    width: 3rem;
+                    height: 3rem;
+                    border-radius: 5rem;
+                    margin-left: 1rem;
+                    margin-top: 0.5rem;
                 }
-                &:hover{
-                    img{
-                        transform: scale(1.1);
-                    }
-                }
+
             }
-            .matchInfo{
-                padding: 1rem;
-                .matchTitle{
+
+            .matchInfo {
+                display: flex;
+                gap: 4rem;
+
+                .matchTitle {
                     color: var(--blackColor);
-                    font-size: 1.25rem;
-                    margin-top: -1rem;
+                    font-size: 1.5rem;
+                    margin-top: 1.8rem;
+                    margin-left: 1rem;
+                    margin-right: 3rem;
 
                 }
-                .matchcontinent{
-                    gap: .5rem;
 
-                    .matchicon{
+                .matchcontinent {
+                    gap: .2rem;
+                    margin-right: 3rem;
+
+                    .matchicon {
                         color: var(--textColor);
-                        font-size: 18px;
+                        font-size: 1.25rem;
                     }
-                    .matchname{
+
+                    .matchname {
                         color: var(--textColor);
                         font-weight: 400;
-                        font-size: 14px;
-                        
+                        font-size: 1.25rem;
+
                     }
                 }
-                .matchfees{
-                    width: 100%;
+
+                .matchfees {
                     justify-content: space-between;
                     padding: 1rem;
                     margin: 1rem 0;
-                    border-top: 1.5px solid var(--greytext);
-                    border-bottom: 1.5px solid var(--greytext);
-                    
-                    .matchgrade{
+                    gap: 1rem;
+
+                    .matchgrade {
                         color: var(--textColor);
                         max-width: 100px;
-                        line-height: 20px; 
+                        line-height: 20px;
                         display: flex;
                         align-items: center;
                         justify-content: center;
                         font-size: 20px;
-                        font-weight: 500 ;
+                        font-weight: 500;
 
 
-                        }
                     }
-                    .matchprice{
-                        font-size: 2rem;
-                        color: var(--blackColor);
-                    }
-
-
                 }
-                .matchdesc{
-                    font-size: 13.5px;
-                    height: 5rem;
-                    color: var(--textColor);
-                    font-weight: 500 ;
-                }
-                .matchbtn{
-                    margin-top: 1rem;
-                    color: var(--whiteColor);
-                    font-weight: 700;
-                    gap: 1.5rem;
-                    border-radius: 2rem;
-                    width: 7rem;
-                    height: 2.5rem;
-                    border: none;
-                    background: var(--gradientColor);
-                    .ta{
-                        transform: translate(25px,-1px);
-                        color: white;
-                        .matchicon{
-                        transform: translate(1px,3px);
-                        align-self: center;
-                        font-size: 18px;
 
-                    }
-                }}
+                .matchprice {
+                    font-size: 1.75rem;
+                    color: var(--blackColor);
+                }
 
 
             }
 
+            .matchdesc {
+                font-size: 13.5px;
+                height: 5rem;
+                color: var(--textColor);
+                font-weight: 500;
+                transform: translateY(2.3rem);
+                margin-left: 2rem;
+            }
+
+
+
+
         }
-
-
 
     }
 
 
+
+}
+
+
 @media screen and (min-width:500px) {
-   
-    .matchContent{
-        grid-template-columns: repeat(5,1fr);
-        
-        .singleDestination{
+
+    .matchContent {
+        grid-template-columns: repeat(1, 1fr);
+
+        .singleDestination {
             height: auto;
 
         }
