--- a/client/src/components/dash/dashside.css
+++ b/client/src/components/dash/dashside.css
@@ -22,7 +22,7 @@
 }
 
 .sidsection {
-  width: 11.5%;
+  width: 11rem;
   height: 46rem;
   border-right: solid white 5px;
   border-bottom: solid white 2px;
@@ -30,7 +30,7 @@
   border-bottom-right-radius: 2rem;
 }
 .sidsection .sidebaritems {
-  margin-left: 1rem;
+  margin-left: 1.3rem;
 }
 .sidsection .sidebaritems .sidebaritemgroup {
   margin-left: 1rem;
