--- a/client/src/components/dash/dashside.scss
+++ b/client/src/components/dash/dashside.scss
@@ -27,7 +27,7 @@
 
 .sidsection{
 
-    width: 11.5%; 
+    width: 11rem; 
     height:46rem;
   
     border-right: solid white 5px;
@@ -39,7 +39,7 @@
     border-bottom-right-radius:2rem ;
 
     .sidebaritems{
-        margin-left:1rem;
+        margin-left:1.3rem;
 
         
     .sidebaritemgroup{
