--- a/client/src/components/dash/managepost.scss
+++ b/client/src/components/dash/managepost.scss
@@ -17,20 +17,16 @@
 
 .tabsec {
     table-layout: auto;
-    margin-top: 5rem;
-    margin-right: 20rem;
-    transform: translate(12rem,-52rem);
-    margin-bottom: -50rem;
+    margin-left: 2rem;
+
 
 
 
     .tabs {
-        width: 109%;
-        border:4px solid hsl(173, 82%, 24%) ;
+        width:80rem;
         box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
         border-radius: 2rem;
-        margin-top: 2rem;
-        background:white;
+        background: var(--cardBG);
 
 
 
