--- a/client/src/pages/admin/mainad.css
+++ b/client/src/pages/admin/mainad.css
@@ -1,8 +1,3 @@
-.mainadsec {
+.postionnn {
   display: flex;
-  flex-direction: column;
-  min-height: 50vh;
-}
-.mainadsec .sidassh {
-  width: 14rem;
 }/*# sourceMappingURL=mainad.css.map */
