--- a/client/src/pages/admin/mainad.scss
+++ b/client/src/pages/admin/mainad.scss
@@ -4,13 +4,6 @@
 
 
 
-
-.mainadsec{
-    display: flex; 
-flex-direction: column; 
-min-height: 50vh; 
-
-.sidassh{
-    width: 14rem; 
-}
+.postionnn{
+    display: flex;
 }
