--- a/client/src/components/posts/getpost.scss
+++ b/client/src/components/posts/getpost.scss
@@ -72,7 +72,6 @@
 
             .contentdiv {
                 width: 39.9rem;
-                border-bottom: 1.5px solid gray;
                 border-radius: 0.11rem;
 
                 height: flex;
@@ -111,18 +110,28 @@
                 align-items: center;
                 justify-content: center;
                 flex-direction: row;
-                height: 3rem;
+                height: 2.9rem;
+                border-bottom: solid gray 1.5px;
+                border-top: solid gray 1.5px;
+            
+
+                
+                width: 95%;
+                margin: 0 auto;
+
 
 
                 .postbtns {
                     border-radius: 50rem;
                     width: 2.9rem;
-                    height: 2.9rem;
+                    height: 2.4rem;
                     outline: none;
                     cursor: pointer;
                     background: var(--cardBG);
                     border: none;
-                    margin: 7rem;
+                    margin: 7.1rem;
+                    transform: translateY(0.2rem);
+
 
 
                     .postico {
