--- a/client/src/pages/internautepages/pagescss/fields.css
+++ b/client/src/pages/internautepages/pagescss/fields.css
@@ -22,6 +22,40 @@
 .mainf .secTitlef {
   transform: translateY(-10px);
 }
+.mainf .secTitlef .icosearchh {
+  margin-left: -1.8rem;
+  margin-bottom: -0.5rem;
+  font-size: 1.5rem;
+  color: hsl(173, 82%, 24%);
+}
+.mainf .secTitlef .searchInput {
+  width: 23rem;
+  margin-bottom: 3rem;
+  margin-left: 2rem;
+  height: 2.5rem;
+  border: 0;
+  border-bottom: 2px solid var(--greytext);
+  outline: 0;
+  font-size: 1.05rem;
+  color: black;
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
+}
+.mainf .secTitlef .searchInput::-moz-placeholder {
+  color: gray;
+}
+.mainf .secTitlef .searchInput::placeholder {
+  color: gray;
+}
+.mainf .secTitlef .searchInput:focus {
+  padding-bottom: 6px;
+  font-weight: 400;
+  border-width: 3px;
+  -o-border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+     border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+  border-image-slice: 1;
+}
 .mainf .secTitlef .titlef {
   position: relative;
   width: -moz-max-content;
@@ -82,6 +116,7 @@
 }
 .mainf .secContentf .singleDestinationf .cardInfof {
   padding: 1rem;
+  width: 15rem;
 }
 .mainf .secContentf .singleDestinationf .cardInfof .destTitlef {
   color: var(--blackColor);
@@ -90,17 +125,18 @@
 .mainf .secContentf .singleDestinationf .cardInfof .continentf {
   gap: 0.5rem;
 }
-.mainf .secContentf .singleDestinationf .cardInfof .continentf .iconf {
-  color: var(--textColor);
-  font-size: 18px;
-}
 .mainf .secContentf .singleDestinationf .cardInfof .continentf .namef {
   color: var(--textColor);
   font-weight: 400;
   font-size: 14px;
+  display: flex;
+}
+.mainf .secContentf .singleDestinationf .cardInfof .continentf .namef .iconf {
+  color: var(--textColor);
+  font-size: 18px;
 }
 .mainf .secContentf .singleDestinationf .cardInfof .feesf {
-  width: 100%;
+  width: 20rem;
   justify-content: space-between;
   padding: 1rem;
   margin: 1rem 0;
@@ -125,6 +161,11 @@
   font-size: 13.5px;
   color: var(--textColor);
   font-weight: 500;
+  word-wrap: break-word;
+  word-break: break-all;
+  white-space: normal;
+  height: 5rem;
+  margin-right: -6rem;
 }
 .mainf .secContentf .singleDestinationf .btn {
   margin-top: 1rem;
