--- a/client/src/components/comment/comment.scss
+++ b/client/src/components/comment/comment.scss
@@ -62,9 +62,20 @@
     margin-top: -1rem;
 }
 .commentt{
+    margin-bottom: -2rem;
     .commentaire{
         transform: translateY(-2rem);
-        margin-bottom: 0.8rem;
+        margin-bottom: -0.5rem;
+        margin-left: 0.5rem;
+        .commentlikebtn{
+border: none;     
+background: transparent;  
+color: var(--blackColor2); 
+transform: translate(33rem,-1.5rem);
+&:hover{
+    color: var(--mmr);
+}
+}
         .commentaireinfo{
             display: flex;
             .commentaireinfoimg{
