--- a/client/src/components/matchs/creatematch.scss
+++ b/client/src/components/matchs/creatematch.scss
@@ -47,7 +47,7 @@
 
 
         .matchname{
-            transform: translate(3rem,2.1rem);
+            transform: translate(1.5rem,2.1rem);
             .matchnameinp{
 
            width: 13rem;
@@ -79,7 +79,7 @@
     }
 
     .reservationdate{
-        transform: translate(20.5rem,-.40rem);
+        transform: translate(15.5rem,-0.40rem);
         .reservationdat{
             width: 13rem;
             border: 0;
@@ -103,6 +103,30 @@
 
 
         }
+        .reservationdatt{
+            width: 13rem;
+            border: 0;
+            border-bottom: 2px solid var(--greytext);
+            outline: 0;
+            font-size: 1.05rem;
+            color: gray;
+            padding: 7px 0;
+            background: transparent;
+            transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
+            margin-left: 1rem;
+         
+
+      
+    
+            &:focus {
+                padding-bottom: 6px;
+                font-weight: 400;
+                border-width: 3px;
+                border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+                border-image-slice: 1;}
+
+
+        }
 
         }
 
@@ -111,7 +135,7 @@
     .chosefield{
         transform: translate(3.5rem,1rem);
         .chosef{
-            width: 30rem;
+            width: 35rem;
             border: 0;
             border-bottom: 2px solid var(--greytext);
             outline: 0;
