--- a/client/src/components/matchs/creatematch.css
+++ b/client/src/components/matchs/creatematch.css
@@ -19,17 +19,16 @@
 }
 
 .creatematchsection {
-  transform: translateY(-3rem);
+  margin-bottom: -12rem;
 }
 .creatematchsection .creatematchmain {
   height: 24rem;
-  width: 45rem;
-  margin: 0 auto;
-  transform: translateY(5rem);
+  width: 30rem;
+  transform: translate(5rem, 5rem);
   border-radius: 2rem;
-  border: solid 4px var(--mmy);
   box-shadow: 10px 2px 3px --blackColor(140, 140, 141, 0.549);
-  background: rgb(56, 56, 56);
+  display: flex;
+  gap: 2rem;
 }
 .creatematchsection .creatematchmain .txxt {
   color: white;
@@ -37,11 +36,8 @@
   font-weight: 500;
   font-size: 16px;
 }
-.creatematchsection .creatematchmain .matchname {
-  transform: translate(1.5rem, 2.1rem);
-}
 .creatematchsection .creatematchmain .matchname .matchnameinp {
-  width: 13rem;
+  width: 15rem;
   border: 0;
   border-bottom: 2px solid var(--greytext);
   outline: 0;
@@ -64,9 +60,6 @@
   -o-border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
      border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
   border-image-slice: 1;
-}
-.creatematchsection .reservationdate {
-  transform: translate(15.5rem, -0.4rem);
 }
 .creatematchsection .reservationdate .reservationdat {
   width: 13rem;
@@ -108,11 +101,8 @@
   border-image-slice: 1;
 }
 
-.chosefield {
-  transform: translate(3.5rem, 1rem);
-}
 .chosefield .chosef {
-  width: 35rem;
+  width: 13rem;
   border: 0;
   border-bottom: 2px solid var(--greytext);
   outline: 0;
@@ -131,37 +121,52 @@
   border-image-slice: 1;
 }
 
-.descrip {
-  transform: translate(5.5rem, 0rem);
-}
 .descrip .descripp {
-  width: 32rem;
-  height: 9rem;
-  border-radius: 0.5rem;
+  width: 15rem;
+  border: 0;
+  border-bottom: 2px solid var(--greytext);
+  outline: 0;
+  font-size: 1.05rem;
   color: white;
-  border: var(--whiteColor) solid 3px;
-  font-size: 15px;
-  background: rgb(56, 56, 56);
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
+}
+.descrip .descripp::-moz-placeholder {
+  color: gray;
+}
+.descrip .descripp::placeholder {
+  color: gray;
 }
 .descrip .descripp:focus {
-  border: solid 2px var(--mmy);
-  outline: none;
+  padding-bottom: 6px;
+  font-weight: 400;
+  border-width: 3px;
+  -o-border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+     border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+  border-image-slice: 1;
 }
 
 .matchcrt {
-  padding: 0.6rem 1.5rem;
-  background: var(--gradientColor);
-  border-radius: 3rem;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  color: white;
-  font-weight: 600;
-  font-size: 15px;
-  transform: translate(36.9rem, 12.7rem);
-  width: 7rem;
-  height: 2.6rem;
+  padding: 12.5px 30px;
+  border: 0;
+  height: 3rem;
+  border-radius: 100px;
+  background-color: hsl(173, 82%, 24%);
+  color: #ffffff;
+  font-weight: bold;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
 }
 .matchcrt:hover {
-  background: var(--PrimaryColor);
+  background-color: var(--mmy);
+  box-shadow: 0 0 20px rgba(111, 197, 255, 0.3137254902);
+  transform: scale(1.1);
+}
+.matchcrt:active {
+  background-color: #3d94cf;
+  transition: all 0.25s;
+  -webkit-transition: all 0.25s;
+  box-shadow: none;
+  transform: scale(0.98);
 }/*# sourceMappingURL=creatematch.css.map */
