--- a/client/src/components/matchs/match.scss
+++ b/client/src/components/matchs/match.scss
@@ -3,7 +3,7 @@
     --SecondryColor: hsl(187, 85%, 43%);
     --gradientColor: linear-gradient(to right, hsl(43, 100%, 43%), hsl(34, 94%, 45%));
     --whiteColor: hsl(0, 0%, 100%);
-    --blackColor: hsl(201, 33%, 16%);
+    --blackColor: hsl(200, 27%, 30%);
     --textColor: hsl(240, 4%, 36%);
     --whiteColordeam: hsl(0, 0%, 93%);
     --greytext: rgb(190, 190, 190);
@@ -13,44 +13,49 @@
     --mm: hsl(155, 70%, 30%);
     --cardHover: rgba(255, 255, 255);
     --mmm: hsl(155, 51%, 45%);
+    --blackColor5: hsl(200, 21%, 40%);
+
 }
 
 .mainmatch {
     width: 98%;
-    transform: translate(25px, 3rem);
-    .searchBar{
+    transform: translate(25px);
+
+    .searchBar {
         width: 23rem;
         margin-bottom: 3rem;
         transform: translateX(5.7rem);
         height: 2.5rem;
         border: 0;
-                border-bottom: 2px solid var(--greytext);
-                outline: 0;
-                font-size: 1.05rem;
-                color: black;
-                padding: 7px 0;
-                background: transparent;
-                transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
-             
+        border-bottom: 2px solid var(--greytext);
+        outline: 0;
+        font-size: 1.05rem;
+        color: black;
+        padding: 7px 0;
+        background: transparent;
+        transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
 
-                &::placeholder {
-                    color: gray;
-                }
 
-        
-                &:focus {
-                    padding-bottom: 6px;
-                    font-weight: 400;
-                    border-width: 3px;
-                    border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
-                    border-image-slice: 1;}
+        &::placeholder {
+            color: gray;
+        }
+
+
+        &:focus {
+            padding-bottom: 6px;
+            font-weight: 400;
+            border-width: 3px;
+            border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+            border-image-slice: 1;
+        }
 
     }
-    .icosearch{
+
+    .icosearch {
         margin-left: 3.7rem;
         font-size: 1.5rem;
         transform: translateY(0.5rem);
-        color: hsl(173, 82%, 24%),;
+        color: hsl(173, 82%, 24%), ;
     }
 
 
@@ -62,16 +67,16 @@
         .singlematch {
             height: 3rem;
             width: 90%;
-            margin-left: 5rem;
+            margin: 0 auto;
             margin-bottom: 1rem;
             border-radius: 2rem;
             align-items: center;
-            background: var(--cardBG);
-            box-shadow: 1 2px 2px rgba(140, 140, 141, 0.549);
+            background: hsl(173, 82%, 24%);
+            box-shadow: 5 5px 5px rgba(140, 140, 141, 0.549);
             display: flex;
 
             &:hover {
-                background: var(--mmm);
+                background: var(--blackColor5);
                 box-shadow: 1 4px 4px rgba(85, 85, 114, 0.549);
                 transition: .3S ease;
 
@@ -94,7 +99,7 @@
                 gap: 4rem;
 
                 .matchTitle {
-                    color: var(--blackColor);
+                    color: var(--whiteColor);
                     font-size: 1.5rem;
                     margin-top: 1.8rem;
                     margin-left: 1rem;
@@ -107,12 +112,12 @@
                     margin-right: 3rem;
 
                     .matchicon {
-                        color: var(--textColor);
+                        color: var(--whiteColor);
                         font-size: 1.25rem;
                     }
 
                     .matchname {
-                        color: var(--textColor);
+                        color: var(--whiteColor);
                         font-weight: 400;
                         font-size: 1.25rem;
 
@@ -126,7 +131,7 @@
                     gap: 1rem;
 
                     .matchgrade {
-                        color: var(--textColor);
+                        color: var(--whiteColor);
                         max-width: 100px;
                         line-height: 20px;
                         display: flex;
@@ -141,7 +146,7 @@
 
                 .matchprice {
                     font-size: 1.75rem;
-                    color: var(--blackColor);
+                    color: var(--whiteColor);
                 }
 
 
@@ -150,7 +155,7 @@
             .matchdesc {
                 font-size: 13.5px;
                 height: 5rem;
-                color: var(--textColor);
+                color: var(--whiteColor);
                 font-weight: 500;
                 transform: translateY(2.3rem);
                 margin-left: 2rem;
