--- a/client/src/components/matchs/mtch.scss
+++ b/client/src/components/matchs/mtch.scss
@@ -20,26 +20,41 @@
 
 
 .popmtch {
-    width: 12%;
-    height: 3.5rem;
-    border-radius:5rem;
-    color: white;
-    border: 2px solid white;
-    cursor: pointer;
+
     margin-top: 9rem;
-    transform: translate(81rem);
-    background: var(--gradientColor);
-    font-size: 15px;
-    font-weight: 700;
-    .icoico{
-
-        font-size: 25px;
-        transform: rotate(90deg) translate(6px,-2px);
-        
-
+    transform: translate(85rem);
+    padding: 0.1em 0.25em;
+    width: 8.6rem;
+    height: 4.2em;
+    background-color: hsl(173, 82%, 24%);
+    border: 0.08em solid #fff;
+    border-radius: 0.3em;
+    font-size: 10px;
+    cursor: pointer;
+  
+    span {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      bottom: 0.5rem;
+      width: 8.25rem;
+      height: 2.5rem;
+      background-color: hsl(173, 82%, 24%);
+      border-radius: 0.2em;
+      font-size: 1.5em;
+      color: #fff;
+      border: 0.08em solid #fff;
+      box-shadow: 0 0.4em 0.1em 0.019em #fff;
+  
+      &:hover {
+        transition: all 0.5s;
+        transform: translate(0, 0.4em);
+        box-shadow: 0 0 0 0 #fff;
+      }
+  
+      &:not(:hover) {
+        transition: all 1s;
+      }
     }
-
-    &:hover {
-        background: var(--mm);
-    }
-}
+  }
