--- a/client/src/components/posts/createpost.css
+++ b/client/src/components/posts/createpost.css
@@ -19,12 +19,12 @@
 }
 
 .postsec .createpostcard {
-  box-shadow: 3px 3px 4px rgba(140, 140, 141, 0.549);
+  box-shadow: 7px 7px 10px 10px rgba(140, 140, 141, 0.549);
   transform: translate(28rem, 7rem);
   width: 38rem;
   height: 13.6rem;
   border-radius: 2.3rem;
-  background: var(--cardBG);
+  background: var(--whiteColor);
 }
 .postsec .createpostcard .postpicname {
   height: 4.5rem;
@@ -32,10 +32,9 @@
 }
 .postsec .createpostcard .postpicname .propic .rm {
   border-radius: 50%;
-  height: 50px;
-  width: 50px;
-  transform: translate(0.5rem, 1.1rem);
-  border: 3px solid hsl(173, 82%, 24%);
+  height: 55px;
+  width: 55px;
+  transform: translate(0.5rem, 1rem);
 }
 .postsec .createpostcard .formpost .posttext {
   width: 88%;
@@ -43,11 +42,11 @@
   height: 120px;
   font-size: 18px;
   resize: vertical;
-  transform: translate(4.2rem, -2.81rem);
+  transform: translate(4.4rem, -2.81rem);
   box-sizing: border-box;
   border-radius: 0.5rem;
   outline: none;
-  background: var(--cardBG);
+  background: transparent;
   color: rgb(39, 39, 39);
 }
 .postsec .createpostcard .formpost .posttext::-moz-placeholder {
@@ -64,32 +63,89 @@
   border-top: solid 1px gray;
   transform: translatey(-2.3rem);
 }
-.postsec .createpostcard .formpost .postpub .picpost {
-  font-size: 25px;
-  transform: translate(28rem, 0.7rem);
-  color: hsl(173, 82%, 24%);
+.postsec .createpostcard .formpost .postpub .picpost .tagimg {
+  border: none;
+  display: flex;
+  padding: 0.6rem 0.9rem;
+  background-color: #488aec;
+  color: #ffffff;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+  vertical-align: middle;
+  align-items: center;
+  border-radius: 0.5rem;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  gap: 0.6rem;
+  box-shadow: 0 4px 6px -1px rgba(72, 138, 236, 0.1921568627), 0 2px 4px -1px rgba(72, 138, 236, 0.0901960784);
+  transition: all 0.6s ease;
+  transform: translate(22.5rem, 0.55rem);
   cursor: pointer;
 }
-.postsec .createpostcard .formpost .postpub .picpost:hover {
-  color: var(--PrimaryColor);
+.postsec .createpostcard .formpost .postpub .picpost .tagimg:hover {
+  box-shadow: 0 10px 15px -3px rgba(72, 138, 236, 0.3098039216), 0 4px 6px -2px rgba(72, 138, 236, 0.0901960784);
+}
+.postsec .createpostcard .formpost .postpub .picpost .tagimg:focus, .postsec .createpostcard .formpost .postpub .picpost .tagimg:active {
+  opacity: 0.85;
+  box-shadow: none;
+}
+.postsec .createpostcard .formpost .postpub .picpost .tagimg svg {
+  width: 1.25rem;
+  height: 1.25rem;
 }
 .postsec .createpostcard .formpost .postpub .btnpost {
-  padding: 0.6rem 1.5rem;
-  background: var(--mm);
-  border-radius: 3rem;
-  border: none;
-  outline: none;
   cursor: pointer;
-  color: white;
-  font-weight: 600;
-  font-size: 15px;
-  transform: translate(30.7rem, -1.8rem);
-  width: 6rem;
-  height: 2.4rem;
+  font-family: inherit;
+  font-size: 18px;
   background: var(--gradientColor);
+  color: white;
+  padding: 0.3em 0.7em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  border-radius: 25px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s;
+  transform: translate(30rem, -1.9rem);
 }
 .postsec .createpostcard .formpost .postpub .btnpost:hover {
-  background: var(--PrimaryColor);
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
+}
+.postsec .createpostcard .formpost .postpub .btnpost:active {
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+}
+.postsec .createpostcard .formpost .postpub .btnpost span {
+  display: block;
+  margin-left: 0.3em;
+  transition: all 0.3s;
+}
+.postsec .createpostcard .formpost .postpub .btnpost svg {
+  width: 18px;
+  height: 18px;
+  fill: white;
+  transition: all 0.3s;
+}
+.postsec .createpostcard .formpost .postpub .btnpost .svg-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.2);
+  margin-right: 0.5em;
+  transition: all 0.3s;
+}
+.postsec .createpostcard .formpost .postpub .btnpost:hover .svg-wrapper {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+.postsec .createpostcard .formpost .postpub .btnpost:hover svg {
+  transform: rotate(45deg);
 }
 .postsec .createpostcard .progress {
   transform: translateY(-5rem);
