--- a/client/src/components/posts/createpost.scss
+++ b/client/src/components/posts/createpost.scss
@@ -23,14 +23,14 @@
 .postsec{
     
 .createpostcard {
-    box-shadow: 3px 3px 4px rgba(140, 140, 141, 0.549);
+    box-shadow: 7px 7px 10px 10px rgba(140, 140, 141, 0.549);
 
 
     transform: translate(28rem, 7rem);
     width: 38rem;
     height: 13.6rem;
     border-radius: 2.3rem;
-    background:var(--cardBG);
+    background:var(--whiteColor);
 
 
 
@@ -43,10 +43,9 @@
 
             .rm {
                 border-radius: 50%;
-                height: 50px;
-                width: 50px;
-                transform: translate(0.5rem, 1.1rem);
-                border: 3px solid hsl(173, 82%, 24%);
+                height: 55px;
+                width: 55px;
+                transform: translate(0.5rem, 1rem);
 
             }
         }
@@ -61,11 +60,11 @@
             height: 120px;
             font-size: 18px;
             resize: vertical;
-            transform: translate(4.2rem, -2.81rem);
+            transform: translate(4.4rem, -2.81rem);
             box-sizing: border-box;
             border-radius: 0.5rem;
             outline: none;
-            background: var(--cardBG);
+            background: transparent;
             color:  rgb(39, 39, 39);
             &::placeholder {
                 color:  rgb(39, 39, 39);
@@ -80,41 +79,102 @@
             transform: translatey(-2.3rem);
             
         .picpost {
-            font-size: 25px;
-            transform: translate(28rem, 0.7rem);
-            color: hsl(173, 82%, 24%);
-
-            cursor: pointer;
-            &:hover{
-                color: var(--PrimaryColor
-                );
+          .tagimg{
+            border: none;
+            display: flex;
+            padding: 0.6rem 0.9rem;
+            background-color: #488aec;
+            color: #ffffff;
+            font-size: 0.75rem;
+            line-height: 1rem;
+            font-weight: 700;
+            text-align: center;
+            text-transform: uppercase;
+            vertical-align: middle;
+            align-items: center;
+            border-radius: 0.5rem;
+            user-select: none;
+            gap: 0.6rem;
+            box-shadow: 0 4px 6px -1px #488aec31, 0 2px 4px -1px #488aec17;
+            transition: all 0.6s ease;
+            transform: translate(22.5rem,0.55rem);
+          cursor: pointer;
+          
+            &:hover {
+              box-shadow: 0 10px 15px -3px #488aec4f, 0 4px 6px -2px #488aec17;
+            }
+          
+            &:focus, &:active {
+              opacity: 0.85;
+              box-shadow: none;
+            }
+          
+            svg {
+              width: 1.25rem;
+              height: 1.25rem;
             }
 
-          
+          }
 
 
         }
 
         .btnpost {
+          cursor: pointer;
 
-            padding: .6rem 1.5rem;
-            background: var(--mm);
-            border-radius: 3rem;
-            border: none;
-            outline: none;
-            cursor: pointer;
-            color: white;
-            font-weight: 600;
-            font-size: 15px;
-            transform: translate(30.7rem, -1.8rem);
-            width: 6rem;
-            height: 2.4rem;
+            font-family: inherit;
+            font-size: 18px;
             background: var(--gradientColor);
-
-     
-
+            color: white;
+            padding: 0.3em 0.7em;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: none;
+            border-radius: 25px;
+            box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+            transition: all 0.3s;
+            transform: translate(30rem,-1.9rem);
+          
             &:hover {
-                background: var(--PrimaryColor);
+              box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
+            }
+          
+            &:active {
+              box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+            }
+          
+            span {
+              display: block;
+              margin-left: 0.3em;
+              transition: all 0.3s;
+            }
+          
+            svg {
+              width: 18px;
+              height: 18px;
+              fill: white;
+              transition: all 0.3s;
+            }
+          
+            .svg-wrapper {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              width: 30px;
+              height: 30px;
+              border-radius: 50%;
+              background-color: rgba(255, 255, 255, 0.2);
+              margin-right: 0.5em;
+              transition: all 0.3s;
+            }
+          
+            &:hover .svg-wrapper {
+              background-color: rgba(255, 255, 255, 0.5);
+            }
+          
+            &:hover svg {
+              transform: rotate(45deg);
             }
 
         }
