--- a/client/src/components/posts/getpost.css
+++ b/client/src/components/posts/getpost.css
@@ -35,9 +35,9 @@
   row-gap: 10px;
   border-radius: 1.5rem;
   align-items: center;
-  box-shadow: 0 2px 4px rgba(140, 140, 141, 0.549);
+  box-shadow: 7px 7px 10px 10px rgba(140, 140, 141, 0.549);
   overflow: hidden;
-  background: var(--cardBG);
+  background: var(--whiteColor);
 }
 .post .postContent .singlepost .postcrtpic .imga {
   border-radius: 50%;
@@ -72,7 +72,7 @@
   padding-right: 1.5rem;
   padding-top: 1rem;
   padding-bottom: 1.5rem;
-  background: var(--cardBG);
+  background: var(--whiteColor);
 }
 .post .postContent .singlepost .postbtnsdiv {
   display: flex;
