--- a/client/src/components/profile/profinfo.scss
+++ b/client/src/components/profile/profinfo.scss
@@ -30,6 +30,7 @@
 .accountinfo {
     transform: translate(0, 7rem);
     width: 100%;
+    
 
     .accountinfffo {
 
@@ -37,25 +38,44 @@
         height: flex;
         border-radius: 3rem;
 
-        .updatebtnnprof{
-            background: var(--mmy);
-            height: 2.5rem;
-            width: 12rem;
-            border-radius: 2rem;
-            margin-top: -5rem;
-            transform: translate(77rem,-8.2rem);
-            border: white solid 2px;
-            font-size: 1.1rem;
-            &:hover{
-                background: var(--mm);
+        .filter {
+            width: 50px;
+            height: 50px;
+            border-radius: 10px;
+            transform: translate(85rem,-8.5rem);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 1px solid rgba(0, 0, 0, 0.192);
+            cursor: pointer;
+            box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.021);
+            transition: all 0.3s;
+            background: var(--mmm);
+          
+            svg {
+              height: 16px;
+              fill: white;
+              transition: all 0.3s;
             }
-           
-        }
+          
+            &:hover {
+              box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.11);
+              background-color: white;
+          
+              svg {
+                fill: rgb(77, 77, 77);
+              }
+            }
+          }
+          
 
         .topinfo {
             height: 10rem;
             width: 95%;
             background: rgb(40,40,40);
+            box-shadow: 7px 7px 10px 10px rgba(140, 140, 141, 0.549);
+            border: 3px white solid;
+
             margin-bottom: 2rem;
             border-radius: 4rem;
             display: flex;
@@ -66,8 +86,8 @@
 
 
             .profileeimg {
-                width: 8.5rem;
-                height: 8.5rem;
+                width: 8.3rem;
+                height: 8.3rem;
                 border: solid 5px var(--cardBG);
                 border-radius: 50%;
                 margin-top: 0.8rem;
@@ -94,9 +114,10 @@
             display: flex;
             gap: 3rem;
             width: 100%;
+            transform: translateY(-3.5rem);
 
             .accounattrb {
-                box-shadow: 0 3px 4px rgba(2, 15, 29, 0.242);
+                box-shadow: 5px 5px 7px 7px rgba(140, 140, 141, 0.549);
                 background: rgb(40, 40, 40);
                 margin-left: 3rem;
 
@@ -108,7 +129,7 @@
 
                 .detailsprof {
                     transform: translate(1.9rem, 1rem);
-                    color: hsl(173, 82%, 24%);
+                    color: white;
                     margin-top: 2rem;
                     font-size: 15px;
                 }
@@ -118,12 +139,77 @@
             }
 
             .pub {
+                
 
 
                 width: 50rem;
                 height: flex;
                 border-radius: 1rem;
                 margin-top: 1.5rem;
+                .postbtnsdiv {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    flex-direction: row;
+                    height: 2.9rem;
+                    border-bottom: solid gray 1.5px;
+                    border-top: solid gray 1.5px;
+                
+    
+                    
+                    width: 95%;
+                    margin: 0 auto;
+    
+    
+    
+                    .postbtns {
+                        border-radius: 50rem;
+                        width: 2.9rem;
+                        height: 2.4rem;
+                        outline: none;
+                        cursor: pointer;
+                        background: transparent;
+                        border: none;
+                        margin: 6.5rem;
+                        transform: translateY(0.3rem);
+                        display: flex;
+                        .likesnumber{
+                            color: gray;
+                            font-size: 23px;
+                            font-weight: 400;
+                            margin-top: -0.2rem;
+                            margin-left: .1rem;
+                            &:hover {
+                                color: var(--mmr);
+                            }
+    
+    
+    
+                        }
+                        
+    
+    
+    
+                        .postico {
+                            color: gray;
+                            font-size: 25px;
+    
+                            &:hover {
+                                color: var(--mmr);
+                            }
+                        }
+    
+                        .postico2 {
+                            color: gray;
+                            font-size: 25px;
+    
+                            &:hover {
+                                color: var(--mm);
+                            }
+                        }
+    
+                    }
+                }
 
                 .postContentt {
                     justify-content: center;
@@ -137,9 +223,9 @@
                         row-gap: 10px;
                         border-radius: 1.5rem;
                         align-items: center;
-                        box-shadow: 0 2px 4px rgba(140, 140, 141, 0.549);
+                        box-shadow: 7px 7px 10px 10px rgba(140, 140, 141, 0.549);
                         overflow: hidden;
-                        background: var(--cardBG);
+                        background: var(--whiteColor);
 
                         .postcrtpicc {
                             .imgaa {
@@ -181,8 +267,8 @@
                             .postpicc {
                                 .imgbb {
                                     height: 23rem;
-                                    width: 36rem;
-                                    transform: translate(0.8rem, -1rem);
+                                    width: 32rem;
+                                    transform: translate(1.5rem, -1rem);
                                     border-radius: 1.9rem;
 
                                 }
