--- a/client/src/pages/internautepages/pagescss/fields.css
+++ b/client/src/pages/internautepages/pagescss/fields.css
@@ -37,7 +37,7 @@
   border-bottom: 2px solid var(--greytext);
   outline: 0;
   font-size: 1.05rem;
-  color: black;
+  color: gray;
   padding: 7px 0;
   background: transparent;
   transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
@@ -60,8 +60,8 @@
   position: relative;
   width: -moz-max-content;
   width: max-content;
-  color: var(--whiteColor);
-  margin: 1rem 0;
+  color: hsl(173, 82%, 24%);
+  margin: 1rem 1rem;
   z-index: 2;
   margin-bottom: 3rem;
 }
@@ -72,11 +72,10 @@
 .mainf .secTitlef .titlef::after {
   position: absolute;
   content: "";
-  background-color: var(--mmm);
+  background-color: hsl(173, 82%, 24%);
   height: 5px;
-  width: 120px;
-  right: 7px;
-  bottom: 0px;
+  right: 5px;
+  bottom: -5px;
   z-index: 1;
 }
 .mainf .secContentf {
@@ -90,7 +89,7 @@
   row-gap: 10px;
   border-radius: 10px;
   align-items: center;
-  background: var(--cardBG);
+  background: var(--whiteColor);
   box-shadow: 0 2px 4px rgba(140, 140, 141, 0.549);
   overflow: hidden;
 }
