--- a/client/src/pages/internautepages/pagescss/fields.scss
+++ b/client/src/pages/internautepages/pagescss/fields.scss
@@ -37,7 +37,7 @@
                     border-bottom: 2px solid var(--greytext);
                     outline: 0;
                     font-size: 1.05rem;
-                    color: black;
+                    color: gray;
                     padding: 7px 0;
                     background: transparent;
                     transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
@@ -58,8 +58,8 @@
         .titlef{
             position: relative;
             width: max-content;
-            color: var(--whiteColor);
-            margin: 1rem 0;
+            color:hsl(173, 82%, 24%);
+            margin: 1rem 1rem;
             z-index: 2;
             margin-bottom: 3rem;
             .iconf{
@@ -70,12 +70,12 @@
             &::after {
                 position: absolute;
                 content: "";
-                background-color: var(--mmm);
+                background-color: hsl(173, 82%, 24%);
                 height: 5px;
-                width: 120px;
-                right: 7px;
-                bottom: 0px;
-                z-index: 1;
+                right: 5px;
+                bottom: -5px;
+                z-index: 1
+                
 
             }
 
@@ -97,7 +97,7 @@
             row-gap: 10px;
             border-radius: 10px;
             align-items: center;
-            background: var(--cardBG);
+            background: var(--whiteColor);
             box-shadow: 0 2px 4px rgba(140, 140, 141, 0.549);
             overflow: hidden;
 
