--- a/client/src/pages/internautepages/pagescss/profile.scss
+++ b/client/src/pages/internautepages/pagescss/profile.scss
@@ -16,127 +16,151 @@
 }
 
 .profsec {
-    padding: 40px;
+
 
     .proff {
-           padding: 20px;
-        max-width: 40rem;
-        max-height: 45rem;
-        margin: 0 auto;
-        transform: translate(-1rem,8%);
-        border-radius: 2rem;
-        border: 4px solid white;
-        background: hsl(173, 82%, 24%);
+        transform: translateY(7rem);
 
-    
-      
+        --font-color: #323232;
+        --font-color-sub: #666;
+        --bg-color: beige;
+        --main-color: black;
+        padding:20px ;
+        background: var(--mmm);
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        gap: 20px;
+        border-radius: 2rem;
+        border: 2px solid var(--main-color);
+        box-shadow: 4px 4px var(--main-color);
+        width: 34rem;
+        height: 38rem;
+        
+        margin: 0 auto;
+
+
+
+
 
         .profform {
-            transform: translateY(-20PX);
             display: flex;
             flex-direction: column;
             gap: 1rem;
-            
+            margin: 0 auto;
+
 
             .profimg {
-                object-fit: cover;
-                margin-right: 0rem;
+                margin-bottom: 1rem;
+
                 align-self: center;
                 border-radius: 50%;
-                width: 8rem;
-                height: 8rem;
+                width: 6.5rem;
+                height: 6.5rem;
                 cursor: pointer;
-                transform: translate(0rem,1rem);
-                border: 4px solid white;
-                
+                transform: translate(0rem, 1rem);
+                box-shadow: 3px 3px var(--main-color);
+                border: 2px solid var(--main-color);
+
+
+
 
             }
-            .yh{
-                align-self: center; 
+
+            .yh {
+                align-self: center;
                 transform: translateY(-90px);
- 
-                .mr{
-                    color: #bebebe; 
+
+                .mr {
+                    color: #bebebe;
                     font-weight: 500;
                     font-size: 20px;
 
                 }
             }
 
- 
+
 
             .profput {
-                padding: 0.8rem;
-                border-radius : 1.5rem;
-                margin-bottom: 0.5rem;
-                margin-top: 0;
-                transform: translateX(3.6rem) translateY(1rem);
-            
+                width: 25rem;
+                height: 2.7rem;
+                border-radius: 5px;
+                border: 2px solid var(--main-color);
+                background-color: var(--bg-color);
+                box-shadow: 4px 4px var(--main-color);
+                font-size: 15px;
+                font-weight: 600;
+                color: var(--font-color);
+                padding: 5px 10px;
                 outline: none;
-                background: var(--whiteColor);
-                width: 30rem;
-    
-                
-                border: none;
+
+                &::placeholder {
+                    color: var(--font-color-sub);
+                    opacity: 0.8;
+                }
+
+                &:focus {
+                    border: 2px solid var(--input-focus);
+                }
             }
 
             .probtn {
-                padding: 0.75rem;
-                border-radius : 1.5rem;
-                background: var(--gradientColor);
-                text-transform: uppercase;
-                font-size: 700;
-                font-size: 1rem;
-                font-weight: 600;
-                transform: translateX(4rem) translateY(1rem);
-                color: var(--whiteColor);
-                border: none;
-                outline: none;
-                width: 30rem;
                 cursor: pointer;
-                &:hover.probtn{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 5px;
+                border: 2px solid var(--main-color);
+                background-color: var(--bg-color);
+                box-shadow: 4px 4px var(--main-color);
+                color: var(--font-color);
+                width: 25rem;
+                height: 3rem;
+             
+                &:hover.probtn {
                     background: var(--yyy);
+
+                    &:active {
+                        box-shadow: 0px 0px var(--main-color);
+                        transform: translate(3px, 3px);
+                    }
                 }
-    
+
 
             }
         }
 
 
-        .proft {
+
+
+        .proftx {
+
+            cursor: pointer;
             display: flex;
-            margin-top: 1.25rem;
-            
-            transform: translateY(5px);
+            justify-content: center;
+            align-items: center;
+            border-radius: 5px;
+            border: 2px solid var(--main-color);
+            background-color: var(--bg-color);
+            box-shadow: 4px 4px var(--main-color);
+            color: var(--font-color);
+            width: 25rem;
+            height: 3rem;
 
-            .proftx {
-                
-                padding: 0.75rem;
-                border-radius : 1.5rem;
-                background: var(--gradientColorm);
-                text-transform: uppercase;
-                font-size: 700;
-                font-size: 1rem;
-                font-weight: 600;
-                transform: translateX(4rem) translateY(-1rem);
-                color: white;
-                border: none;
-                outline: none;
-                width: 30rem;
-                cursor: pointer;
-                &:hover.proftx{
-                    background: var(--yyyy);
-                }
+            &:hover.proftx {
+                background: var(--yyyy);
             }
+        }
 
-        }
-        .uper{
-            color: #bebebe; 
-            font-weight: 500;
-            font-size: 20px;;
-            align-self: center; 
-            transform: translateY(-430px)translateX(380px);
-        }
     }
 
+    .uper {
+        color: #bebebe;
+        font-weight: 500;
+        font-size: 20px;
+        ;
+        align-self: center;
+        transform: translateY(-430px)translateX(380px);
+    }
 }
